<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark"
    tools:context=".temp.InputActivity">

    <EditText
        android:id="@+id/etDeal"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rounded_corner"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/deal_hint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/Dark"
        android:textColorHint="@color/hintColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/Dark"
        android:textColorHint="@color/hintColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDeal" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/Dark"
        android:textColorHint="@color/hintColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />

    <ImageView
        android:id="@+id/uploadImgView"
        android:layout_width="0dp"
        android:layout_height="246dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_imgview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <Button
        android:id="@+id/chooseImgBtn"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_btn"
        android:elevation="3dp"
        android:text="@string/choose_file"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImgView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="72dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseImgBtn" />

    <TextView
        android:id="@+id/progressInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicator_perc"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tap Here to \n Upload Image"
        android:textAlignment="center"
        android:textColor="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="@+id/uploadImgView"
        app:layout_constraintEnd_toEndOf="@+id/uploadImgView"
        app:layout_constraintStart_toStartOf="@+id/uploadImgView"
        app:layout_constraintTop_toTopOf="@+id/uploadImgView" />


</androidx.constraintlayout.widget.ConstraintLayout>