<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutbg"
    tools:context=".temp.DetailedActivity">

    <TextView
        android:id="@+id/tvDeal"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/deal_textview"
        android:textAlignment="center"
        android:textColor="@color/Dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tvdesc_text"
        android:textColor="@color/Dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="268dp"
        android:layout_height="165dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeal"
        tools:srcCompat="@tools:sample/avatars[1]"
        android:contentDescription="Upload Images" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_price_text"
        android:textColor="@color/colorPrimary_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/updateLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="invisible">

            <EditText
                android:id="@+id/etDeal"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/deal_hint"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/Dark"
                android:textColorHint="@color/hintColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:hint="@string/price_hint"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/Dark"
                android:textColorHint="@color/hintColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDeal" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="@color/Dark"
                android:textColorHint="@color/hintColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPrice" />

            <ImageView
                android:id="@+id/uploadImgViewUpdate"
                android:layout_width="0dp"
                android:layout_height="189dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_imgview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />

            <Button
                android:id="@+id/chooseImgBtnUpdate"
                android:layout_width="141dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_btn"
                android:elevation="3dp"
                android:text="@string/common_google_play_services_update_button"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uploadImgViewUpdate" />

            <ProgressBar
                android:id="@+id/progressBarUpdate"
                android:layout_width="72dp"
                android:layout_height="61dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/uploadImgViewUpdate"
                app:layout_constraintEnd_toEndOf="@+id/uploadImgViewUpdate"
                app:layout_constraintStart_toStartOf="@+id/uploadImgViewUpdate"
                app:layout_constraintTop_toTopOf="@+id/uploadImgViewUpdate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>